class module feature,stepdef

--- a/src/test/resources/config/Configuration.properties
+++ b/src/test/resources/config/Configuration.properties
@@ -1,5 +1,7 @@
-indexUrl=https://dsportalapp.herokuapp.com/
-loginUrl=https://dsportalapp.herokuapp.com/login
+indexUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/login
+loginUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/
+
+
 homepageUrl=https://dsportalapp.herokuapp.com/home
 registerUrl=https://dsportalapp.herokuapp.com/register
 
