--- a/src/test/resources/config/Configuration.properties
+++ b/src/test/resources/config/Configuration.properties
@@ -1,5 +1,6 @@
 indexUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/login
-password=LmsHackathon@2024  
+homepageUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com
+password=LmsHackathon@2024
 username=Sdet@gmail.com
 
 browser=CHROME
