--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,17 @@
     <version>1.27.1</version>
 </dependency>
 
-  </dependencies>
+   	<dependency>
+   		<groupId>asta_dsalgoBDD</groupId>
+   		<artifactId>asta_dsalgoBDD</artifactId>
+   		<version>0.0.1-SNAPSHOT</version>
+   	</dependency>
+   	<dependency>
+   		<groupId>BrowserStack</groupId>
+   		<artifactId>BrowserStack</artifactId>
+   		<version>0.0.1-SNAPSHOT</version>
+   	</dependency>
+   </dependencies>
   
    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 <build>
