Revert "Merge branch 'Shruti' into vidya"
This reverts commit 725840b9fc71b3aa7433d66b5e64891dac28e26a, reversing
changes made to f1b051bc39accde3467674f882a29c3bf98657bb.

--- a/src/test/resources/config/Configuration.properties
+++ b/src/test/resources/config/Configuration.properties
@@ -1,10 +1,6 @@
 indexUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/login
-
-dashboardUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/
-classModulePageUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com/session
-password=LmsHackathon@2024 
-
+homepageUrl=https://lms-frontend-hackathon-oct24-173fe394c071.herokuapp.com
+password=LmsHackathon@2024
 username=Sdet@gmail.com
 
 browser=CHROME
-
