--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Team5-LMSEmpire</groupId>
   <artifactId>Team5-LMSEmpire</artifactId>
@@ -110,17 +110,7 @@
     <version>1.27.1</version>
 </dependency>
 
-   	<dependency>
-   		<groupId>asta_dsalgoBDD</groupId>
-   		<artifactId>asta_dsalgoBDD</artifactId>
-   		<version>0.0.1-SNAPSHOT</version>
-   	</dependency>
-   	<dependency>
-   		<groupId>BrowserStack</groupId>
-   		<artifactId>BrowserStack</artifactId>
-   		<version>0.0.1-SNAPSHOT</version>
-   	</dependency>
-   </dependencies>
+  </dependencies>
   
    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 <build>
